--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </head>
     <body>
         <div class="logo">
-            <img src="src/jimmy-logo.png" alt="Logo" />
+            <img src="src/jimmy-logo.svg" alt="Logo" />
         </div>
     </body>
 </html>
