--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 background: url("src/bg-photo.jpg") no-repeat center center
                     fixed;
                 background-size: cover;
+                background-color: #8F6F46;
                 font-family: Arial, sans-serif;
                 display: flex;
                 justify-content: center;
