--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>jimmyarts</title>
+        <link rel="icon" type="image/svg" href="src/favicon.svg" />
         <style>
             body {
                 margin: 0;
@@ -11,7 +12,6 @@
                 background: url("src/bg-photo.jpg") no-repeat center center
                     fixed;
                 background-size: cover;
-                background-color: #8F6F46;
                 font-family: Arial, sans-serif;
                 display: flex;
                 justify-content: center;
