--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             }
 
             .logo img {
-                width: 80vw; /* Tamanho dinâmico baseado em 20% da largura da janela */
+                width: 80vw; /* Tamanho dinâmico baseado na largura da janela */
                 max-width: 1240px; /* Tamanho máximo para evitar que fique grande demais */
                 height: auto;
             }
