--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     </head>
     <body>
         <header>
-            <div>> Portfólio em construção...</div>
+            <div class="construcao">
+                Portfólio
+                <p>em construção...</p>
+            </div>
             <div class="bordaembaixotracejada">jimmy.art.br</div>
         </header>
 
