Changes to be committed: 	modified:   index.html 	new file:   index_old.html 	new file:   src/instagram.svg 	new file:   src/mail.svg 	new file:   src/stylesnew.css

--- a/index.html
+++ b/index.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>jimmyarts</title>
+        <link rel="stylesheet" href="src/stylesnew.css" />
         <link rel="icon" type="image/svg" href="src/favicon.svg" />
         <link
-            href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Azeret+Mono&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="src/styles.css" />
+        <title>Jimmy</title>
     </head>
     <body>
-        <header>
-            <div class="construcao">
-                Portfólio
-                <p>em construção...</p>
+        <div class="main">
+            <div>
+                <a href="https://www.instagram.com/jimmyarts" target="_blank"
+                    ><img
+                        src="src/instagram.svg"
+                        alt="Instagram"
+                        class="instagram-icone"
+                    /><span class="textohorizontal">instagram</span></a
+                >
             </div>
-            <div class="bordaembaixotracejada">jimmy.art.br</div>
-        </header>
-
-        <div class="logo">
-            <img src="src/jimmy-logo.svg" alt="Logo" />
+            <div class="logo">
+                <img src="src/jimmy-logo.svg" alt="Logo" />
+            </div>
+            <div>
+                <a href="mailto:jimmyarts@gmail.com" target="_blank"
+                    ><span class="textohorizontal">email</span
+                    ><img src="src/mail.svg" alt="Instagram" class="mail-icone"
+                /></a>
+            </div>
         </div>
-
-        <footer>
-            <a
-                href="https://instagram.com/jimmyarts"
-                target="_blank"
-                class="bordaembaixo"
-                >@instagram</a
-            >
-            <a href="mailto:jimmyarts@gmail.com" class="bordaembaixo"
-                >jimmyarts@gmail.com</a
-            >
-        </footer>
     </body>
 </html>
